--- a/module-5/Tageant_EX4.html
+++ b/module-5/Tageant_EX4.html
@@ -15,25 +15,29 @@
                         <div class="grid-item1">
                             <h3>Jurassic Park</h3>    
                             <figure>
-                            <img src="images/Jurassic_Park.jpeg" alt="Jurassic Park" width="400px" height="350px">
+                            <img src="Images/Jurassic_Park.jpeg" alt="Jurassic Park" width="400px" height="350px">
                             <figcaption>author: Michael Crichton</figcaption>
                         </figure>
                         </div>
                         <div class="grid-item2"> 
                             <h3>The Passage</h3>
                             <figure>
-                            <img src="images/The_Passage.jpeg" alt="The Passage" width="400px" height="350px">
+                            <img src="Images/The_Passage.jpeg" alt="The Passage" width="400px" height="350px">
                             <figcaption>author: Justin Cronin</figcaption>
                         </figure>
                         </div>
                         <div class="grid-item3">
                             <h3>Salem's Lot</h3> 
                             <figure>
-                                <img src="images/Salem's_Lot.jpeg" alt="Salem's Lot" width="400px" height="350px">
+                                <img src="Images/Salem's Lot" width="400px" height="350px">
                                 <figcaption>author: Stephen King</figcaption>
                             </figure>
                             </div>
                     </div>
+            </div>
+
+            <div>
+                <a class = "link" href="../index.html">Back To The Landing Page</a>
             </div>
 
 
