--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
             <li><a href = "module-4/Tageant_EX3.html">Assignment 4.3</a></li>
             <li><a href = "module-5/Tageant_EX4.html">Assignment 5.2</a></li>
             <li><a href = "module-7/Tageant_Mod7_2.html">Assignment 7.2</a></li>
+            <li><a href = "module-9/Tageant_EX6">Assignment 9.2</a></li>
         </ul>
         <h3>Projects</h3>
         <ul>
-            <li><a href = "#">bioSite Project Home Page</a></li>
+            <li><a href = "..bioSite/index.html">bioSite Project Home Page</a></li>
             <li><a href = "#">Final Exam</a></li>
         </ul>
         <h4>Important Links</h4>
