--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <li><a href = "module-5/Tageant_EX4.html">Assignment 5.2</a></li>
             <li><a href = "module-7/Tageant_Mod7_2.html">Assignment 7.2</a></li>
             <li><a href = "module-9/Tageant_EX6">Assignment 9.2</a></li>
+            <li><a href = "module-11/assignment_11_2.html">Assignment 11.2</a></li>
         </ul>
         <h3>Projects</h3>
         <ul>
