--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         </ul>
         <h3>Projects</h3>
         <ul>
-            <li><a href = "..bioSite/index.html">bioSite Project Home Page</a></li>
-            <li><a href = "#">Final Exam</a></li>
+            <li><a href = "https://that-robin-guy.github.io/bioSite/">bioSite Project Home Page</a></li>
+            <li><a href = "Final/Robin_Tageant.html">My Bio Assignment</a></li>
         </ul>
         <h4>Important Links</h4>
         <ul>
