Correcting Final Error

--- a/Final/Robin_Tageant.html
+++ b/Final/Robin_Tageant.html
@@ -21,7 +21,7 @@
 
                 <div class="profile">
                     <div class="profile-pic">
-                        <img src="C:\Users\Robin\csd\CSD---340\Final\Images\Robin_Dogs.jpeg" alt="Robin" height="350" width="300">
+                        <img src="Images/Robin_Dogs.jpeg" alt="Robin" height="350" width="300">
                     </div>
                     <div class="profile-body">
                         <h2>Robin's Biography:</h2>
